discord-frontend/hartex-discord-commands-test/tests/ui/invalid_command_type.stderr
error: invalid command type: `4`
  --> tests/ui/invalid_command_type.rs:26:27
   |
26 | #[metadata(command_type = 4)]
   |                           ^
